feat: add set-default to example-gnome.yaml

--- a/profiles/templates/example-gnome.yaml
+++ b/profiles/templates/example-gnome.yaml
@@ -85,6 +85,10 @@ packages:
 # Services
 # --------------------------------------------------
 services:
+  # Set the default target
+  set-default:
+    - graphical.target
+
   # Enable services at boot (optional)
   enable:
     - gdm
