--- a/profiles/templates/example-gnome.yaml
+++ b/profiles/templates/example-gnome.yaml
@@ -54,23 +54,24 @@ packages:
       - yq
 
       # Desktop
-      - admin-tools
-      - base-graphical
-      - container-management
-      - desktop-accessibility
-      - dial-up
-      - firefox
-      - fonts
-      - gnome-desktop
-      - guest-desktop-agents
-      - hardware-support
-      - input-methods
-      - libreoffice
-      - multimedia
-      - networkmanager-submodules
-      - printing
-      - standard
-      - workstation-product
+      - "@admin-tools"
+      - "@base-graphical"
+      - "@container-management"
+      - "@desktop-accessibility"
+      - "@dial-up"
+      - "@firefox"
+      - flatpak
+      - "@fonts"
+      - "@gnome-desktop"
+      - "@guest-desktop-agents"
+      - "@hardware-support"
+      - "@input-methods"
+      - "@libreoffice"
+      - "@multimedia"
+      - "@networkmanager-submodules"
+      - "@printing"
+      - "@standard"
+      - "@workstation-product"
 
     # Fedora-version-specific (optional)
     fedora_42:
