chore: update example-gnome.yaml

--- a/profiles/templates/example-gnome.yaml
+++ b/profiles/templates/example-gnome.yaml
@@ -26,6 +26,7 @@ repos:
     free: true
     nonfree: true
   flathub: true
+  vscode: true
 
 # --------------------------------------------------
 # Package management
