chore: update cosmic-dev.yaml

--- a/profiles/cosmic-dev.yaml
+++ b/profiles/cosmic-dev.yaml
@@ -59,7 +59,11 @@ packages:
       - "@networkmanager-submodules"
       - "@printing"
       - "@standard"
+      - code
       - flatpak
+      - git
+      - neovim
+      - shfmt
 
   exclude:
     all_versions:
