chore: update gnome-dev.yaml

--- a/profiles/gnome-dev.yaml
+++ b/profiles/gnome-dev.yaml
@@ -59,7 +59,11 @@ packages:
       - "@printing"
       - "@standard"
       - "@workstation-product"
+      - code
       - flatpak
+      - git
+      - neovim
+      - shfmt
 
   exclude:
     all_versions:
