chore: update kde-dev.yaml

--- a/profiles/kde-dev.yaml
+++ b/profiles/kde-dev.yaml
@@ -58,7 +58,11 @@ packages:
       - "@networkmanager-submodules"
       - "@printing"
       - "@standard"
+      - code
       - flatpak
+      - git
+      - neovim
+      - shfmt
 
   exclude:
     all_versions:
