--- a/profiles/gnome-dev.yaml
+++ b/profiles/gnome-dev.yaml
@@ -1,6 +1,6 @@
 metadata:
-  name: gnome
-  description: Fedora GNOME profile
+  name: gnome-dev
+  description: Fedora GNOME for developers profile
   version: "1.0.0"
   maintainer: ephmo
   last_updated: "2025-12-23"
