--- a/.editorconfig
+++ b/.editorconfig
@@ -1,10 +1,13 @@
 root = true
 
 [*.sh]
-end_of_line = lf
-insert_final_newline = true
 indent_style = space
 indent_size = 2
 shell_variant = bash
+simplify = true
 binary_next_line = true
 switch_case_indent = true
+space_redirects = true
+keep_padding = true
+function_next_line = false
+minify = false
