chore: improve profiles

--- a/profiles/gnome-dev.yaml
+++ b/profiles/gnome-dev.yaml
@@ -3,7 +3,8 @@ metadata:
   description: Fedora GNOME for developers profile
   version: "1.0.0"
   maintainer: ephmo
-  last_updated: "2025-12-25"
+  release_date: "2025-12-29"
+  last_modified: "2025-12-29"
 
 requires:
   distro: fedora
@@ -13,10 +14,9 @@ requires:
   arch: x86_64
 
 repos:
-  rpmfusion:
-    free: true
-    nonfree: true
   flathub: true
+  rpmfusion-free: true
+  rpmfusion-nonfree: true
   vscode: true
 
 packages:
