--- a/profiles/templates/example-gnome.yaml
+++ b/profiles/templates/example-gnome.yaml
@@ -6,8 +6,8 @@ metadata:
   description: Example Fedora GNOME profile
   version: "1.0.0" # Semantic Versioning (MAJOR.MINOR.PATCH)
   maintainer: your-name
-  release_date: "2025-12-30"
-  last_modified: "2025-12-30"
+  release_date: "2026-01-01"
+  last_modified: "2026-01-01"
 
 # --------------------------------------------------
 # Requirements / compatibility
@@ -20,12 +20,14 @@ requires:
   arch: x86_64
 
 # --------------------------------------------------
-# Repositories
+# Extra repositories (optional)
 # --------------------------------------------------
 repos:
   rpmfusion-free: true
   rpmfusion-nonfree: true
   vscode: true
+  copr:
+    - user/project
 
 # --------------------------------------------------
 # Package management
@@ -51,7 +53,7 @@ packages:
       - "@printing"
       - "@standard"
       - "@workstation-product"
-      - flatpak
+      - gnome-sudoku
 
     # Fedora-version-specific (optional)
     fedora_42:
